Use process builder so that std err can be sent via std out.